# humusic

./: .gitignore  README.md  __main__.spec  hello.py  pyproject.toml  requirements.txt
datasets/: datasets_doc.md
hum2midi/: Recorder.py  WaveAnalyzer.py  hum2midi_doc.md
library_test/: library_test_doc.md  miditok_test.ipynb  mido_test.ipynb  piano1_only.mid  test.mid
midi_generator/: .gitignore  Generator.py  LSTMwithAtt.py  LSTMwithAttention.py  generated_test10.mid  generated_test5.mid  generator_main.ipynb  model_test.py  prompt.mid  test.mid
midi_generator/model_maker/: allmidi_pianoonly_converter.ipynb
model_maker/: .gitignore  model_tester.ipynb  model_trainer.ipynb
resources/: resources_doc.md
resources/path/: path_to_resources.json
resources/prompts/: better_prompt.mid  piano1_only_bach_850.mid
resources/tokenizers/piano1_token_1/: tokenizer.json
resources/tokenizers/piano1_token_2/: tokenizer.json
src/: __main__.py
src/application/: Application.py  AudioPlayer.py  Getch.py  JSONLoader.py  MidPlayer.py  MidiPlayer.py  WavePlayer.py  app.py  hello.py  path_to_resources.json  prompts.json  sample.py
src/continuous_generator/: Generator.py  MidPlayer.py
src/hum2midi/: Wave2MidiConverter.py  WaveAnalyzer.py
