[project]
name = "humusic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.13"
dependencies = [
    "ipykernel>=6.29.5",
    "keras>=3.7.0",
    "matplotlib>=3.9.3",
    "miditok>=3.0.4",
    "mido>=1.3.3",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
]

