[project]
name = "humusic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.13"
dependencies = [
    "icecream>=2.1.3",
    "ipykernel>=6.29.5",
    "keras>=3.7.0",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.9.4",
    "miditok>=3.0.4",
    "mido>=1.3.3",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "pyside6>=6.8.1",
    "pyworld>=0.3.4",
    "scipy>=1.13.1",
    "setuptools>=75.6.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "transformers>=4.47.0",
]

